Add cwdonator enhancements with exclude_leaders and use_lists parameters
Co-authored-by: uniquepixel <90635777+uniquepixel@users.noreply.github.com>